Add spotless